# scorep_plugin_ucx

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  include  index.html  scorep_plugin_common  scorep_plugin_cxx_wrapper  src
include/: plugin_types.h  utils.h
src/: scorep_plugin_ucx.cpp  scorep_plugin_ucx.h  ucx_sampling.cpp  ucx_sampling.h
